# NSF-RAPID-EAR-2333178

./: .gitignore  .pmignore  .pmtk-lock  README.md  basic_style.mplstyle  pyproject.toml
.config/: data_registry.yaml  project.yaml  unit_registry.yaml
archive/build-miniseed-archive/: README.md  calculate_data_recovery.py  lemi-ascii2mseed.py  pyproject.toml
archive/data-availability/: README.md  askja-mag.toml  pyproject.toml
archive/data-summaries/: README.md  build-summary.py  pyproject.toml
data/metadata/: raw-recordings.yaml
docs/: 000_build_all.sh  00_project-summary.md  01_project-description.md  02_references.md  03_budget-justification.md  04_facilities.md  05_data-management-plan.md
docs/reports/final/2025/: annual-report-2025.md  build.sh  field-summary-2025.md
docs/reports/final/NSF-project-outcomes/: build.sh  project-outcomes.md
figures/figure01/: 0_retrieve_gnss_timeseries.py  1_plot_gnss_timeseries.py
figures/figure02/: 00_get_DEM_data.gmt  01_plot_proposed_network_map.gmt  defaults.gmt
metadata/instruments/: seismic_network_22-23.txt
metadata/xy/: Halslon.xy  centralvolc_all.xy  oskjuvatn.xy
proposal/: README.md  requirements.txt
proposal/docs/: 00_project-summary.md  03_budget-justification.md
proposal/figures/figure01/: 1_plot_gnss_timeseries.py
proposal/figures/figure02/: 00_get_DEM_data.gmt  defaults.gmt
proposal/metadata/instruments/: gnss_network_22-23.txt  proposed_high_res_mag.txt  proposed_low_cost_mag.txt
proposal/metadata/xy/: Hagongulon.xy  fisswarms_out.xy
reports/2024/: annual-report-2024.md  build-all.sh  field-summary-2024.md
workspace/build-miniseed-archive/: README.md  askja-mag-clip.conf
