[project]
name = "build-miniseed-archive"
version = "0.1.0"
description = "Build a miniSEED archive from the raw data recordings."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "archivetk",
    "obspy>=1.5.0",
    "pandas>=3.0.2",
    "pmtk",
]

[tool.uv.sources]
archivetk = { git = "https://github.com/hemmelig/miniseed-archivetk" }
pmtk = { git = "https://github.com/hemmelig/pmtk" }
