[project]
name = "data-summaries"
version = "0.1.0"
description = "Create basic data overview visualisations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "obspy>=1.5.0",
    "pandas>=3.0.2",
    "pmtk",
]

[tool.uv.sources]
pmtk = { git = "https://github.com/hemmelig/pmtk" }
